--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'by.jrr'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = "15"
 
 repositories {
 	mavenCentral()
@@ -33,3 +33,4 @@ dependencyManagement {
 test {
 	useJUnitPlatform()
 }
+targetCompatibility = JavaVersion.VERSION_15
